--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_contact">AddContact</string>
+    <string name="name">Your Name</string>
+    <string name="number">Phone Number</string>
+    <string name="add_contact">Add Contact</string>
+    <string name="bck">Back</string>
 </resources>
